--- a/css/style.css
+++ b/css/style.css
@@ -10,33 +10,47 @@ body {
 
 .container {
   margin: 20px auto;
-  width: 800px;
+  width: 100%;
+  max-width: 1100px;
 }
 
 .baku {
-  background-image: url(file:///Users/tylerandersen/Desktop/css-exercise-four/images/baku.jpg);
+  background-image: url(../images/baku.jpg);
 }
 
 .london {
-  background-image: url(/Users/tylerandersen/Desktop/css-exercise-four/images/london.png);
+  background-image: url(../images/london.png);
 }
 
 .madrid {
-  background-image: url(/Users/tylerandersen/Desktop/css-exercise-four/images/madrid.jpg);
+  background-image: url(../images/madrid.jpg);
 }
 
 .rome {
-  background-image: url(/Users/tylerandersen/Desktop/css-exercise-four/images/rome.jpg);
+  background-image: url(../images/rome.jpg);
 }
 
 .preview {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  margin: 20px;
+  margin: 20px 0;
   width: inherit;
   float: left;
   height: 300px;
+}
+
+.preview h1 {
+  top: 40px;
+  left: 40px;
+  position: relative;
+}
+
+section > h1 {
+  text-align: center;
+  padding-bottom: 20px;
+  font-family: system-ui, sans-serif;
+  letter-spacing: 2px;
 }
 
 @media screen and (min-width: 575px){
